// prisma/schema.prisma
generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  USER
  POWER_USER
  ADMIN
}

enum SharePermission {
  READ
  WRITE
}

enum InviteStatus {
  PENDING
  ACCEPTED
  REVOKED
  EXPIRED
}

// File category for attachments. Mirrored by `ATTACHMENT_TYPES` in
// packages/types so the web filter dropdown stays in lock-step.
enum AttachmentType {
  INVOICE
  WARRANTY
  OTHER
}

// Lifecycle of an alert row. SCHEDULED → SENT on successful delivery (push
// + email both attempted; SENT marker happens only AFTER push, see
// reminder.processor.ts). CANCELLED on warranty/article delete. FAILED when
// the job exhausts its retries.
//
// Naming note: this enum was named `Alerte` in the early French-language
// schema. The shared type union in @wim/types is `AlertStatus` (no "e");
// literal string values match.
enum AlerteStatus {
  SCHEDULED
  SENT
  CANCELLED
  FAILED
}

// Distinguishes auto-scheduled warranty reminders (J-30/J-7/J-1 around
// garantieFin) from user-created custom alerts that can recur monthly.
enum AlerteKind {
  WARRANTY
  CUSTOM
}

enum ClaimStatus {
  NONE
  OPEN
  APPROVED
  REJECTED
  RESOLVED
}

enum ArticleNoteKind {
  SERVICE
  WARRANTY_CLAIM
  MAINTENANCE
  OTHER
}

// Lifecycle state of an item the user owns (or once owned). ACTIVE is the
// default; the rest are organizational — items keep their record and stay in
// the inventory regardless of status, but can be filtered and are badged.
// Mirrored by `ARTICLE_STATUSES` in packages/types so the web filter/select
// stays in lock-step.
enum ArticleStatus {
  ACTIVE
  IN_REPAIR
  LOANED
  SOLD
  DISPOSED
  LOST
}

// Broad top-level category for an item — a structured complement to the
// free-form tags. Optional (null = uncategorized). Mirrored by
// ARTICLE_CATEGORIES in @wim/types; sharpens "spend by category" analytics.
enum ArticleCategory {
  ELECTRONICS
  APPLIANCE
  FURNITURE
  TOOL
  VEHICLE
  CLOTHING
  JEWELRY
  SPORTS
  COLLECTIBLE
  OTHER
}

enum TransferDirection {
  PUSH
  PULL
}

// A chat message is either plain text or a structured purchase OFFER (carries
// an amount + a status the owner resolves). The literal values are typed inline
// as string-literal unions in apps/web/src/services/api.ts (MessageKind /
// OfferStatus) and apps/api/src/modules/messages/message.service.ts — these two
// enums are not re-exported from @wim/types.
enum MessageKind {
  TEXT
  OFFER
}

enum OfferStatus {
  PENDING
  ACCEPTED
  DECLINED
  WITHDRAWN
}

model Location {
  locationId  Int      @id @default(autoincrement())
  ownerUserId Int
  name        String   @db.VarChar(120)
  description String?  @db.VarChar(255)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  owner    User              @relation(fields: [ownerUserId], references: [userId], onDelete: Cascade)
  articles ArticleLocation[]

  @@index([ownerUserId])
  @@unique([ownerUserId, name], map: "uq_location_owner_name")
}

model User {
  userId    Int      @id @default(autoincrement())
  email     String   @unique
  password  String
  role      Role     @default(USER)

  // Bumped on admin "force-logout": existing JWTs carry the version they
  // were issued with; auth middleware rejects any token whose version is
  // older than the current value.
  tokenVersion Int   @default(0)

  // Billing (Stripe)
  // Used to manage subscription lifecycle (cancel at period end, etc.)
  stripeCustomerId     String? @unique @db.VarChar(80)
  stripeSubscriptionId String? @unique @db.VarChar(80)

  // Display currency (ISO 4217) for inventory value formatting on the client.
  currency String @default("USD") @db.VarChar(3)

  // Optional spend budgets (in the display currency). Null = no budget set.
  // Spend is measured against items acquired in the current calendar
  // month/year (acquisition = warranty purchase date, else createdAt),
  // matching the analytics spend rule.
  monthlyBudget Decimal? @db.Decimal(12, 2)
  annualBudget  Decimal? @db.Decimal(12, 2)

  // Capability token for the read-only iCalendar feed (calendar apps can't
  // send the auth cookie). Null = feed disabled.
  calendarToken String? @unique @db.VarChar(64)

  // Opt-out switch for emailed reminders (push is governed separately by
  // having a subscription). Defaults on; the Profile page can disable it.
  emailReminders Boolean @default(true)

  // Opt-in weekly digest of warranties expiring in the next 30 days. Default
  // off so existing users stay quiet until they choose to subscribe.
  weeklyDigest   Boolean @default(false)

  // Cross-device UI preferences. Null = "no server preference", so the
  // client keeps its localStorage / system-default choice. Validated
  // against the known enums at the API boundary (profile.schemas).
  theme      String? @db.VarChar(16) // light | dark | ocean | cyber | sunset
  language   String? @db.VarChar(8)  // en | fr | pt | es | nl
  dateFormat String? @db.VarChar(16) // system | dd/MM/yyyy | MM/dd/yyyy | yyyy-MM-dd

  // High-water mark for the notification bell: alerts created after this
  // instant count as "unseen". Null = everything is unseen.
  alertsSeenAt DateTime?

  // Mirrors `TotpSecret.verified` for fast login-path gating: when true,
  // password-only login is rejected and the client must complete a TOTP
  // challenge to receive a session cookie. Default false so existing rows
  // need no backfill.
  totpEnabled Boolean @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Inventaire possédé
  articlesOwned   Article[]   @relation("UserArticles")
  warrantiesOwned Garantie[]  @relation("UserWarranties")
  alertsOwned     Alerte[]    @relation("UserAlerts")

  // Partage
  shareInvites ShareInvite[] @relation("UserShareInvites") // owner (créateur)
  sharesGiven  InventoryShare[] @relation("SharesGiven")   // owner -> target
  sharesReceived InventoryShare[] @relation("SharesReceived") // target -> owner

  transferRequestsMade     ArticleTransferRequest[] @relation("TransferRequests")
  transferRequestsReceived ArticleTransferRequest[] @relation("TransferOffers")

  // Secure 1:1 negotiation chat (see MessageThread). A user can be the
  // article owner on some threads and the interested requester on others.
  messageThreadsOwned     MessageThread[] @relation("ThreadOwner")
  messageThreadsRequested MessageThread[] @relation("ThreadRequester")
  messagesSent            Message[]       @relation("MessageSender")
  loansOwned              Loan[]          @relation("UserLoans")
  insurancePolicies       InsurancePolicy[] @relation("UserInsurancePolicies")
  serviceRecordsOwned     ServiceRecord[] @relation("UserServiceRecords")

  // Audit (optionnel)
  auditLogs AuditLog[]
  attachments Attachment[]
  locations   Location[]
  tags        Tag[]
  articleNotes ArticleNote[]
  savedViews  SavedView[]
  pushSubscriptions PushSubscription[]
  passwordResetTokens PasswordResetToken[]
  sessions            UserSession[]
  totp                TotpSecret?
  articleTemplates    ArticleTemplate[]
}

model PasswordResetToken {
  id         Int       @id @default(autoincrement())
  userId     Int
  // SHA-256 hex of the plaintext token we email out. The plaintext never
  // hits the DB, so a stolen dump can't be used to consume an unused token.
  tokenHash  String    @unique @db.VarChar(64)
  expiresAt  DateTime
  consumedAt DateTime?
  createdAt  DateTime  @default(now())

  user User @relation(fields: [userId], references: [userId], onDelete: Cascade)

  @@index([userId])
}

model PushSubscription {
  id        Int      @id @default(autoincrement())
  userId    Int
  endpoint  String   @unique @db.VarChar(500)
  p256dh    String   @db.VarChar(200)
  auth      String   @db.VarChar(100)
  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [userId], onDelete: Cascade)

  @@index([userId])
}

model Article {
  articleId          Int      @id @default(autoincrement())
  ownerUserId        Int
  articleNom         String   @db.VarChar(100)
  articleModele      String   @db.VarChar(100)
  articleDescription String?  @db.VarChar(255)
  productImageUrl    String?  @db.VarChar(500)

  // Identity fields for power-user lookups ("find my laptop by serial").
  // Folded into the substring `q` filter alongside name/model/description.
  serialNumber       String?  @db.VarChar(120)
  brand              String?  @db.VarChar(120)

  // Purchase price for inventory-value tracking. Decimal to avoid float
  // rounding; serialized as a string over JSON and formatted on the client.
  purchasePrice      Decimal? @db.Decimal(12, 2)

  // Annual straight-line depreciation rate as a percentage (0–100). Null
  // means the item doesn't depreciate. Used to derive a current value from
  // purchasePrice and the item's age.
  depreciationRate   Decimal? @db.Decimal(5, 2)

  // Sharing v2 (simplest): when true, this article is visible in the shared view
  // to all POWER_USER accounts (read-only; owner-only edit/unshare).
  sharedWithPowerUsers Boolean @default(false)

  // Opt-in public page token. Null = no public page. When set, anyone with the
  // link can view a read-only, privacy-safe subset (name/brand/model/photo —
  // never price or serial) at /i/<token>; powers the QR label.
  publicToken String? @unique @db.VarChar(64)

  // Lifecycle state (ACTIVE by default). Organizational only — does not hide
  // the row from the live list; surfaced as a badge + an optional list filter.
  status ArticleStatus @default(ACTIVE)

  // Optional broad category (null = uncategorized). Complements tags and feeds
  // the spend-by-category analytics.
  category ArticleCategory?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  // Soft-delete marker. Null = live. Live reads scope `deletedAt: null`; the
  // Trash view lists rows where this is set. A daily maintenance job
  // hard-deletes rows older than ARTICLE_TRASH_RETENTION_DAYS.
  deletedAt DateTime?

  owner    User     @relation("UserArticles", fields: [ownerUserId], references: [userId], onDelete: Cascade)
  garantie Garantie?
  attachments Attachment[]
  alertes  Alerte[]
  locations ArticleLocation[]
  tags     ArticleTag[]
  notes    ArticleNote[]
  transferRequests ArticleTransferRequest[]
  messageThreads   MessageThread[]
  loans            Loan[]
  insurances       ArticleInsurance[]
  serviceRecords   ServiceRecord[]

  @@index([ownerUserId])
  @@index([ownerUserId, deletedAt])
  @@index([ownerUserId, status])
  @@index([ownerUserId, category])
  @@index([articleNom, articleModele])
  @@index([sharedWithPowerUsers])
  @@index([sharedWithPowerUsers, updatedAt(sort: Desc)])
  // Trigram GIN indexes accelerate the substring ILIKE search (see
  // article.service buildArticleWhere). Requires the pg_trgm extension,
  // created in the same migration.
  @@index([articleNom(ops: raw("gin_trgm_ops"))], type: Gin, map: "Article_articleNom_trgm_idx")
  @@index([articleModele(ops: raw("gin_trgm_ops"))], type: Gin, map: "Article_articleModele_trgm_idx")
  @@index([articleDescription(ops: raw("gin_trgm_ops"))], type: Gin, map: "Article_articleDescription_trgm_idx")
  // serialNumber + brand joined the `q` substring OR in round 8 (F1) but had
  // no trigram index, so those terms fell back to a sequential scan.
  @@index([serialNumber(ops: raw("gin_trgm_ops"))], type: Gin, map: "Article_serialNumber_trgm_idx")
  @@index([brand(ops: raw("gin_trgm_ops"))], type: Gin, map: "Article_brand_trgm_idx")
}

model Tag {
  tagId       Int      @id @default(autoincrement())
  ownerUserId Int
  name        String   @db.VarChar(40)
  createdAt   DateTime @default(now())

  owner    User         @relation(fields: [ownerUserId], references: [userId], onDelete: Cascade)
  articles ArticleTag[]

  @@unique([ownerUserId, name], map: "uq_tag_owner_name")
  @@index([ownerUserId])
}

model ArticleTag {
  articleId Int
  tagId     Int

  article Article @relation(fields: [articleId], references: [articleId], onDelete: Cascade)
  tag     Tag     @relation(fields: [tagId], references: [tagId], onDelete: Cascade)

  @@id([articleId, tagId])
  @@index([tagId])
}

model ArticleNote {
  noteId      Int             @id @default(autoincrement())
  articleId   Int
  ownerUserId Int
  content     String          @db.VarChar(2000)
  // Categorize the entry (service log, claim event, maintenance, generic
  // observation) so the timeline can be filtered. Defaults to OTHER so the
  // backfill of existing rows stays neutral.
  kind        ArticleNoteKind @default(OTHER)
  createdAt   DateTime        @default(now())
  updatedAt   DateTime        @updatedAt

  article Article @relation(fields: [articleId], references: [articleId], onDelete: Cascade)
  owner   User    @relation(fields: [ownerUserId], references: [userId], onDelete: Cascade)

  @@index([articleId])
  @@index([ownerUserId])
}

model SavedView {
  id          Int      @id @default(autoincrement())
  ownerUserId Int
  name        String   @db.VarChar(60)
  // The Articles-page filter querystring (e.g. "warranty=expired&priceMin=100").
  query       String   @db.VarChar(500)
  createdAt   DateTime @default(now())

  owner User @relation(fields: [ownerUserId], references: [userId], onDelete: Cascade)

  @@unique([ownerUserId, name], map: "uq_savedview_owner_name")
  @@index([ownerUserId])
}

model ArticleLocation {
  articleId   Int
  locationId  Int
  assignedAt  DateTime @default(now())

  article   Article   @relation(fields: [articleId], references: [articleId], onDelete: Cascade)
  location  Location  @relation(fields: [locationId], references: [locationId], onDelete: Cascade)

  @@id([articleId, locationId])
  @@index([locationId])
}

model Garantie {
  garantieId        Int      @id @default(autoincrement())
  ownerUserId       Int
  // Optional link to an article (0..1). Enforced unique so an article
  // cannot have multiple warranties.
  garantieArticleId Int?     @unique
  garantieNom       String   @db.VarChar(100)
  garantieDateAchat DateTime
  garantieDuration  Int      // en mois
  garantieFin       DateTime
  garantieIsValide  Boolean  @default(true)

  // Optional linked image/proof attachment
  garantieImageAttachmentId Int? @unique

  // Warranty claim workflow: NONE until the owner opens a claim, then tracks
  // its outcome. claimNote is free text; claimUpdatedAt stamps the last change.
  claimStatus    ClaimStatus @default(NONE)
  claimNote      String?     @db.VarChar(2000)
  claimUpdatedAt DateTime?

  // Provider contact details — surfaced on the claim PDF and as a
  // "Contact provider" block in the UI so the owner knows who to call.
  providerName  String? @db.VarChar(120)
  providerPhone String? @db.VarChar(40)
  providerUrl   String? @db.VarChar(2048)

  // Set when the owner has renewed or extended this warranty at least once.
  // Surfaced as a small "last renewed" chip on the UI; null = never renewed.
  renewedAt DateTime?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  owner      User      @relation("UserWarranties", fields: [ownerUserId], references: [userId], onDelete: Cascade)
  article    Article?  @relation(fields: [garantieArticleId], references: [articleId], onDelete: Cascade)
  garantieImageAttachment Attachment? @relation("GarantieImageAttachment", fields: [garantieImageAttachmentId], references: [attachmentId], onDelete: SetNull)
  attachments Attachment[] @relation("AttachmentGarantie")
  alertes    Alerte[]
  history    WarrantyHistory[]

  @@index([ownerUserId])
  @@index([garantieFin])
  @@index([ownerUserId, garantieFin])
}

// Append-only audit of warranty renewals / extensions. Because Garantie has a
// unique (article, warranty) — there's only ever one live warranty per article
// — we roll the live row forward and snapshot the *prior* state here. Each
// entry pins what the warranty looked like before the change, so the UI can
// show a chain like "renewed 2026 → 2028 → 2030".
enum WarrantyHistoryEvent {
  RENEWED
  EXTENDED
  REPLACED
}

model WarrantyHistory {
  id              Int      @id @default(autoincrement())
  garantieId      Int
  ownerUserId     Int
  event           WarrantyHistoryEvent
  priorDateAchat  DateTime
  priorDuration   Int
  priorFin        DateTime
  note            String?  @db.VarChar(500)
  createdAt       DateTime @default(now())

  garantie Garantie @relation(fields: [garantieId], references: [garantieId], onDelete: Cascade)

  @@index([garantieId, createdAt])
  @@index([ownerUserId, createdAt])
}

model Alerte {
  alerteId          Int      @id @default(autoincrement())
  ownerUserId       Int
  alerteNom         String   @db.VarChar(100)
  alerteDate        DateTime
  alerteDescription String?  @db.VarChar(255)

  status            AlerteStatus @default(SCHEDULED)
  kind              AlerteKind   @default(WARRANTY)
  // For CUSTOM alerts: repeat every N months after firing (null = one-shot).
  recurrenceMonths  Int?
  // Set when an alert has been snoozed; alerteDate is moved to this time too.
  snoozedUntil      DateTime?
  sentAt            DateTime?
  failedAt          DateTime?
  errorMessage      String?  @db.VarChar(500)
  errorStack        String?  @db.Text

  // Liens (au moins un des deux)
  alerteGarantieId Int?
  alerteArticleId  Int?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  owner   User     @relation("UserAlerts", fields: [ownerUserId], references: [userId], onDelete: Cascade)
  garantie Garantie? @relation(fields: [alerteGarantieId], references: [garantieId], onDelete: Cascade)
  article  Article?  @relation(fields: [alerteArticleId], references: [articleId], onDelete: Cascade)

  @@index([ownerUserId])
  @@index([status])
  @@index([ownerUserId, status])
  @@index([alerteDate])
  @@index([ownerUserId, alerteDate])
  @@index([alerteGarantieId])
  @@index([alerteArticleId])

  @@unique([alerteGarantieId, alerteDate], map: "uq_alerte_garantie_date")
}

model Attachment {
  attachmentId Int            @id @default(autoincrement())
  ownerUserId  Int
  type         AttachmentType @default(INVOICE)

  // Optional links to related entities
  articleId  Int?
  garantieId Int?

  // Stockage (S3/Cloud) -> URL, ou stockage DB -> base64 (déconseillé)
  fileName     String         @db.VarChar(255)
  mimeType     String         @db.VarChar(100)
  fileSize     Int
  fileUrl      String         @db.VarChar(500)
  // Resized preview generated for image uploads; null for PDFs or when
  // resizing failed (callers fall back to fileUrl).
  thumbUrl     String?        @db.VarChar(500)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  owner    User     @relation(fields: [ownerUserId], references: [userId], onDelete: Cascade)
  article  Article? @relation(fields: [articleId], references: [articleId], onDelete: Cascade)
  garantie Garantie? @relation("AttachmentGarantie", fields: [garantieId], references: [garantieId], onDelete: Cascade)
  garantieImageFor Garantie? @relation("GarantieImageAttachment")

  @@index([ownerUserId])
  @@index([articleId])
  @@index([garantieId])
}

model InventoryShare {
  inventoryShareId Int             @id @default(autoincrement())
  ownerUserId      Int
  targetUserId     Int
  permission       SharePermission @default(READ)
  active           Boolean         @default(true)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  owner  User @relation("SharesGiven", fields: [ownerUserId], references: [userId], onDelete: Cascade)
  target User @relation("SharesReceived", fields: [targetUserId], references: [userId], onDelete: Cascade)

  @@unique([ownerUserId, targetUserId], map: "uq_share_owner_target")
  @@index([ownerUserId])
  @@index([targetUserId])
}

model ShareInvite {
  shareInviteId Int          @id @default(autoincrement())
  ownerUserId   Int
  email         String       @db.VarChar(255)
  token         String       @unique @db.VarChar(128)
  status        InviteStatus @default(PENDING)
  permission    SharePermission @default(READ)

  expiresAt DateTime
  usedAt    DateTime?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  owner User @relation("UserShareInvites", fields: [ownerUserId], references: [userId], onDelete: Cascade)

  @@index([ownerUserId])
  @@index([email])
  @@index([status])
  // createInvite filters on all three together (owner + email + PENDING); a
  // compound index collapses that to a single seek under concurrent invites.
  @@index([ownerUserId, email, status])
}

// Ownership transfer of one article from one user to another. A PUSH is
// initiated by the current owner (who knows the recipient's email); a PULL
// is initiated by a POWER_USER who can see the article and wants to own it.
// In both cases the "second party" (recipient for PUSH, owner for PULL)
// must accept before ownership moves. The token is sent to that party.
model ArticleTransferRequest {
  id          Int               @id @default(autoincrement())
  articleId   Int
  requesterId Int               // wants to receive the article
  ownerId     Int               // current article owner
  direction   TransferDirection
  token       String            @unique @db.VarChar(128)
  status      String            @db.VarChar(20) // PENDING | ACCEPTED | REJECTED | REVOKED | EXPIRED
  message     String?           @db.VarChar(500)
  expiresAt   DateTime
  usedAt      DateTime?
  createdAt   DateTime          @default(now())
  updatedAt   DateTime          @updatedAt

  article   Article @relation(fields: [articleId], references: [articleId], onDelete: Cascade)
  requester User    @relation("TransferRequests", fields: [requesterId], references: [userId], onDelete: Cascade)
  owner     User    @relation("TransferOffers", fields: [ownerId], references: [userId], onDelete: Cascade)

  @@index([ownerId, status])
  @@index([requesterId, status])
  @@index([articleId, status])
}

// Secure 1:1 negotiation chat scoped to a single shared article. A POWER_USER
// who can see a shared item (`Article.sharedWithPowerUsers` or an active
// `InventoryShare`) opens a thread with the owner to negotiate a transfer; the
// article it is pinned to lets the owner identify the item at a glance.
//
// Exactly two participants gate every read/write: the article owner *at thread
// creation* (`ownerUserId`) and the interested `requesterId`. ownerUserId is a
// snapshot — it stays put even if the article is later transferred, so the
// original conversation stays readable by both original parties. One thread per
// (article, requester); replies append `Message` rows.
//
// Unread is tracked with a boolean per side (rather than a read-timestamp
// compared against lastMessageAt, which Prisma can't express column-to-column):
// posting a message sets the *recipient's* flag true and the sender's false;
// opening the thread clears the viewer's flag.
model MessageThread {
  id          Int @id @default(autoincrement())
  articleId   Int
  ownerUserId Int
  requesterId Int

  // Denormalized newest-activity time for a cheap inbox sort without a
  // join/aggregate over Message. Bumped only on a new message, not on read.
  lastMessageAt DateTime @default(now())

  ownerUnread     Boolean @default(false)
  requesterUnread Boolean @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  article   Article   @relation(fields: [articleId], references: [articleId], onDelete: Cascade)
  owner     User      @relation("ThreadOwner", fields: [ownerUserId], references: [userId], onDelete: Cascade)
  requester User      @relation("ThreadRequester", fields: [requesterId], references: [userId], onDelete: Cascade)
  messages  Message[]

  @@unique([articleId, requesterId], map: "uq_thread_article_requester")
  @@index([ownerUserId, lastMessageAt(sort: Desc)])
  @@index([requesterId, lastMessageAt(sort: Desc)])
  @@index([articleId])
}

model Message {
  id           Int      @id @default(autoincrement())
  threadId     Int
  senderUserId Int
  body         String   @db.VarChar(2000)
  createdAt    DateTime @default(now())

  // OFFER messages carry a price the owner can accept (→ fires a transfer) or
  // decline. TEXT messages leave offerAmount/offerStatus null.
  kind        MessageKind  @default(TEXT)
  offerAmount Decimal?     @db.Decimal(12, 2)
  offerStatus OfferStatus?

  thread MessageThread @relation(fields: [threadId], references: [id], onDelete: Cascade)
  sender User          @relation("MessageSender", fields: [senderUserId], references: [userId], onDelete: Cascade)

  @@index([threadId, createdAt])
  @@index([senderUserId])
}

// A loan/borrow record for an item the owner lent out. Pairs with the LOANED
// article status (auto-set while a loan is active). An optional due date can
// spawn a CUSTOM reminder alert (reminderAlerteId), cancelled on return.
model Loan {
  loanId        Int       @id @default(autoincrement())
  ownerUserId   Int
  articleId     Int
  borrowerName  String    @db.VarChar(120)
  borrowerEmail String?   @db.VarChar(180)
  loanedAt      DateTime  @default(now())
  dueAt         DateTime?
  returnedAt    DateTime?
  note          String?   @db.VarChar(500)
  // The due-date reminder this loan created (if any), so a return can cancel it.
  reminderAlerteId Int?
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt

  owner   User    @relation("UserLoans", fields: [ownerUserId], references: [userId], onDelete: Cascade)
  article Article @relation(fields: [articleId], references: [articleId], onDelete: Cascade)

  @@index([ownerUserId])
  @@index([articleId])
  @@index([ownerUserId, returnedAt])
}

// An insurance policy the user holds (home contents, electronics rider, etc.).
// Covers zero-or-more articles via the ArticleInsurance join. An optional
// renewal date schedules a reminder, mirroring the Loan/Garantie pattern.
model InsurancePolicy {
  policyId       Int       @id @default(autoincrement())
  ownerUserId    Int
  provider       String    @db.VarChar(150)
  policyNumber   String?   @db.VarChar(100)
  // Recurring premium and the total coverage limit. Decimal to avoid float
  // rounding; serialized as strings over JSON and formatted on the client.
  premium        Decimal?  @db.Decimal(12, 2)
  coverageAmount Decimal?  @db.Decimal(12, 2)
  renewalAt      DateTime?
  note           String?   @db.VarChar(500)
  // The renewal reminder this policy created (if any), so an edit/delete can
  // cancel or reschedule it.
  reminderAlerteId Int?
  createdAt      DateTime  @default(now())
  updatedAt      DateTime  @updatedAt

  owner    User               @relation("UserInsurancePolicies", fields: [ownerUserId], references: [userId], onDelete: Cascade)
  articles ArticleInsurance[]

  @@index([ownerUserId])
}

// Join row linking an article to an insurance policy (many-to-many: one policy
// covers many items; an item can sit under more than one policy).
model ArticleInsurance {
  articleId Int
  policyId  Int

  article Article         @relation(fields: [articleId], references: [articleId], onDelete: Cascade)
  policy  InsurancePolicy @relation(fields: [policyId], references: [policyId], onDelete: Cascade)

  @@id([articleId, policyId])
  @@index([policyId])
}

// Append-only service / maintenance log entry for an article (a repair, a
// tune-up, a cleaning). An optional `nextDueAt` schedules a reminder so the
// next service isn't forgotten — cancelled on delete, mirroring the Loan
// reminder wiring.
model ServiceRecord {
  serviceId        Int       @id @default(autoincrement())
  ownerUserId      Int
  articleId        Int
  performedAt      DateTime
  description      String    @db.VarChar(300)
  cost             Decimal?  @db.Decimal(12, 2)
  provider         String?   @db.VarChar(150)
  nextDueAt        DateTime?
  reminderAlerteId Int?
  createdAt        DateTime  @default(now())

  owner   User    @relation("UserServiceRecords", fields: [ownerUserId], references: [userId], onDelete: Cascade)
  article Article @relation(fields: [articleId], references: [articleId], onDelete: Cascade)

  @@index([ownerUserId])
  @@index([articleId])
}

// Persistent record of every Stripe webhook event we have already
// processed. The webhook handler tries to insert here first; a unique
// violation on `eventId` is treated as a duplicate delivery and the rest
// of the handler is skipped. This survives application restarts, unlike
// the in-row stripeSubscriptionId no-op guard it complements.
model ProcessedStripeEvent {
  eventId     String   @id @db.VarChar(255)
  type        String   @db.VarChar(100)
  processedAt DateTime @default(now())

  @@index([type])
  @@index([processedAt])
}

model AuditLog {
  id        Int      @id @default(autoincrement())
  userId    Int?
  action    String   @db.VarChar(80)
  entity    String   @db.VarChar(80)
  entityId  Int?
  ip        String?  @db.VarChar(80)
  userAgent String?  @db.VarChar(255)
  method    String?  @db.VarChar(20)
  path      String?  @db.VarChar(255)
  status    Int?
  metadata  Json     @default("{}")
  createdAt DateTime @default(now())

  user User? @relation(fields: [userId], references: [userId], onDelete: SetNull)

  @@index([userId])
  @@index([action])
  @@index([entity, entityId])
  @@index([createdAt])
  // Admin views filter "user X, last N days" — a compound index turns the
  // userId AND createdAt-range lookup into a single seek instead of two
  // single-column scans intersected.
  @@index([userId, createdAt(sort: Desc)])
}

// Reusable starting point for the article create form. Stores identity
// fields + optional default locations/tags as a JSON payload — we don't
// reference live Location/Tag rows because they could be deleted out from
// under the template; the client decodes the payload and resolves names →
// ids at use time.
model ArticleTemplate {
  id          Int      @id @default(autoincrement())
  ownerUserId Int
  name        String   @db.VarChar(120)
  payload     Json     @default("{}")
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  user User @relation(fields: [ownerUserId], references: [userId], onDelete: Cascade)

  @@index([ownerUserId])
}

// TOTP shared secret + bcrypt-hashed one-time backup codes. Setup creates
// the row with `verified=false`; the user must enter a valid code from
// their authenticator app before we flip `verified=true` and bump
// `User.totpEnabled` (the fast path the login route gates on).
model TotpSecret {
  id              Int      @id @default(autoincrement())
  userId          Int      @unique
  secret          String   @db.VarChar(64)
  // JSON array of bcrypt-hashed backup codes — never the plaintext. Each
  // entry is consumed on use (filtered out of the array).
  backupCodesHash String   @db.Text
  verified        Boolean  @default(false)
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  user User @relation(fields: [userId], references: [userId], onDelete: Cascade)
}

// One row per active sign-in. `jti` matches the JWT's jti claim and the
// Redis denylist key, so revoking a session here also revokes the token
// network-wide. `lastActiveAt` is bumped (best-effort, throttled) by
// authGuard so the user can see "active 2 minutes ago" in the UI.
// `revokedAt` soft-deletes — keeps an audit trail without polluting the
// "active sessions" view.
model UserSession {
  id            Int       @id @default(autoincrement())
  userId        Int
  jti           String    @unique @db.VarChar(64)
  deviceLabel   String?   @db.VarChar(120)
  ip            String?   @db.VarChar(80)
  userAgent     String?   @db.VarChar(255)
  lastActiveAt  DateTime  @default(now())
  createdAt     DateTime  @default(now())
  revokedAt     DateTime?

  user User @relation(fields: [userId], references: [userId], onDelete: Cascade)

  @@index([userId, revokedAt])
  @@index([userId, lastActiveAt(sort: Desc)])
}

// Admin-configurable feature flags. One row per feature key; when a row is
// absent the service falls back to a hardcoded default. The requiredRole sets
// the minimum role: USER = everyone, POWER_USER = subscription paywall,
// ADMIN = admin-only.
model FeatureFlag {
  id           Int      @id @default(autoincrement())
  featureKey   String   @unique @db.VarChar(60)
  requiredRole Role     @default(USER)
  updatedAt    DateTime @updatedAt
}

// A time-bounded window where USER-role accounts can access a feature that is
// normally POWER_USER-gated. If ANY active grant covers the feature, USER-role
// users get access until expiresAt. Multiple grants can coexist (e.g. when the
// admin extends the window). Expired rows are retained for audit but ignored
// by the access check.
model FeatureTempGrant {
  id         Int      @id @default(autoincrement())
  featureKey String   @db.VarChar(60)
  expiresAt  DateTime
  note       String?  @db.VarChar(255)
  createdAt  DateTime @default(now())

  @@index([featureKey, expiresAt])
}
